[gd_scene load_steps=3 format=3 uid="uid://bn8i1l4q13pdw"]

[ext_resource type="PackedScene" uid="uid://i2nwlab8rau" path="res://addons/gaea/graph/components/argument_editors/argument_editor.tscn" id="1_kwsdp"]
[ext_resource type="Script" uid="uid://vcssy68etcrx" path="res://addons/gaea/graph/components/argument_editors/parameter_name_argument_editor.gd" id="2_ofrdj"]

[node name="VariableNameParameter" instance=ExtResource("1_kwsdp")]
size_flags_horizontal = 3
script = ExtResource("2_ofrdj")

[node name="Label" parent="." index="0"]
visible = false

[node name="NameLabel" type="Label" parent="." index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EditButton" type="Button" parent="." index="2"]
layout_mode = 2
tooltip_text = "Edit parameter name."
flat = true

[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
